[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/Effects/Textures/gravity_barrier.png" type="Texture" id=1]
[ext_resource path="res://src/Levels/Inferno/GravityPassage.gd" type="Script" id=2]
[ext_resource path="res://src/Effects/Textures/explosion.png" type="Texture" id=3]
[ext_resource path="res://src/Effects/Materials/RemainsMat.tres" type="Material" id=4]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=5]
[ext_resource path="res://src/Effects/Materials/RemainsParticle.tres" type="Material" id=6]
[ext_resource path="res://src/Effects/Textures/remains_gravity.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 23, 80 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 23, 0, 23, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 46, 0, 23, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 69, 0, 23, 80 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 92, 0, 23, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 115, 0, 23, 80 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 12, 47 )

[sub_resource type="CanvasItemMaterial" id=71]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="Curve" id=70]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=69]
curve = SubResource( 70 )

[sub_resource type="ParticlesMaterial" id=245]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 25.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 69 )

[node name="GravityPassage" type="Node2D"]
script = ExtResource( 2 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 5 )
frames = SubResource( 7 )
frame = 3
playing = true

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( -14, 0 )
z_index = -1
shape = SubResource( 8 )

[node name="explosion_particles" type="Particles2D" parent="."]
material = SubResource( 71 )
position = Vector2( 0, 0.5 )
z_index = 2
emitting = false
amount = 15
lifetime = 2.0
local_coords = false
process_material = SubResource( 245 )
texture = ExtResource( 3 )

[node name="remains_particles" type="Particles2D" parent="."]
material = ExtResource( 4 )
position = Vector2( 7, 0.5 )
z_index = -1
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -57.1529, -87.2786, 242.701, 378.093 )
process_material = ExtResource( 6 )
texture = ExtResource( 7 )

[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
